--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Appspringboot
 server.port=5050
-spring.profiles.active=uat
+spring.profiles.active=dev
+server.servlet.context-path=/notecollecter
